# Graphalyze

./: .travis.yml  Graphalyze.cabal  LICENSE  TODO  setVersion.sh
Data/Graph/: Analysis.hs
Data/Graph/Analysis/: Algorithms.hs  Graphalyze.hs  Internal.hs  Reporting.hs  Testing.hs  Types.hs  Utils.hs  Visualisation.hs
Data/Graph/Analysis/Algorithms/: Clustering.hs  Common.hs  Directed.hs  Undirected.hs
Data/Graph/Analysis/Reporting/: Pandoc.hs
