Name:                Graphalyze
Version:             0.14.1.0
Synopsis:            Graph-Theoretic Analysis library.
Description:         A library to use graph theory to analyse the relationships
                        inherent in discrete data.
Category:            Graphs, Algorithms
License:             OtherLicense
License-File:        LICENSE
Copyright:           (c) Ivan Lazar Miljenovic
Author:              Ivan Lazar Miljenovic
Maintainer:          Ivan.Miljenovic@gmail.com
Extra-Source-Files:  TODO
Cabal-Version:       >= 1.6
Build-Type:          Simple

Tested-With:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4,
                     GHC == 7.10.2, GHC == 7.11.*

Source-Repository head
    Type:         git
    Location:     git://github.com/ivan-m/Graphalyze.git


Library {
        Build-Depends:   base == 4.*,
                         array,
                         containers,
                         directory,
                         filepath,
                         old-locale,
                         process,
                         random,
                         time,
                         bktrees >= 0.2 && <0.4,
                         fgl == 5.5.*,
                         graphviz >= 2999.15 && < 2999.18,
                         pandoc == 1.12.*,
                         text

        Exposed-Modules:     Data.Graph.Analysis
                             Data.Graph.Analysis.Types
                             Data.Graph.Analysis.Utils
                             Data.Graph.Analysis.Visualisation
                             Data.Graph.Analysis.Algorithms
                             Data.Graph.Analysis.Algorithms.Common
                             Data.Graph.Analysis.Algorithms.Directed
                             Data.Graph.Analysis.Algorithms.Clustering
                             Data.Graph.Analysis.Reporting
                             Data.Graph.Analysis.Reporting.Pandoc

        Other-Modules:       Data.Graph.Analysis.Internal,
                             Paths_Graphalyze

        Ghc-Options:         -Wall
        Ghc-Prof-Options:    -prof -auto-all
}
