cabal-version: 2.2
name: Graphalyze
version: 0.16.0.0
author: Ivan Lazar Miljenovic
maintainer: Ivan.Miljenovic@gmail.com
synopsis: Graph-Theoretic Analysis library.
description:
  A library to use graph theory to analyse the relationships
  inherent in discrete data.
category: Graphs, Algorithms
license-file: LICENSE
tested-with: GHC == 8.4.2
extra-source-files: TODO
build-type: Simple
copyright: (c) Ivan Lazar Miljenovic

library
  exposed-modules:
    Data.Graph.Analysis
    Data.Graph.Analysis.Algorithms
    Data.Graph.Analysis.Algorithms.Clustering
    Data.Graph.Analysis.Algorithms.Common
    Data.Graph.Analysis.Algorithms.Directed
    Data.Graph.Analysis.Reporting
    Data.Graph.Analysis.Reporting.Pandoc
    Data.Graph.Analysis.Types
    Data.Graph.Analysis.Utils
    Data.Graph.Analysis.Visualisation
  build-depends:
    , array
    , base == 4.*
    , bktrees >= 0.2
    , containers
    , directory
    , fgl >= 5.6
    , filepath
    , graphviz >= 2999.20
    , pandoc >= 2.0
    , process
    , random
    , text
    , time
  ghc-options: -Wall
  other-modules:
    Data.Graph.Analysis.Internal,
    Paths_Graphalyze

source-repository head
  type: git
  location: https://github.com/ivan-m/Graphalyze.git
